--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   </head>
   <body>
     <h1>
-      🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨
-      SUSSY BAKKA AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-      🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨🤨
+      A website for C. A. F. E. will soon come!
     </h1>
   </body>
 </html>
